added team,contact,portfolio pages

--- a/client/views/home/home.html
+++ b/client/views/home/home.html
@@ -1,132 +1,125 @@
 <template name="home">
 
 
-    <nav class="navbar navbar-fixed-top navbar-inverse" role="navigation">
-      <div class="container">
-        <div class="navbar-header">
-          <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-ex1-collapse">
-            <span class="sr-only">Toggle navigation</span>
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-          </button>
-          <a class="navbar-brand" href="http://startbootstrap.com">Start Bootstrap</a>
-        </div>
-
-        <!-- Collect the nav links, forms, and other content for toggling -->
-        <div class="collapse navbar-collapse navbar-ex1-collapse">
-          <ul class="nav navbar-nav">
-            <li><a href="#about">About</a></li>
-            <li><a href="#services">Services</a></li>
-            <li><a href="#contact">Contact</a></li>
-          </ul>
-        </div><!-- /.navbar-collapse -->
-      </div><!-- /.container -->
-    </nav>
-
     <div class="container">
 
       <div class="row">
 
         <div class="col-lg-12">
-          <h1 class="page-header">4 Col Portfolio <small>Showcase Your Work</small></h1>
+          <h1 class="page-header">About <small>It's Nice to Meet You!</small></h1>
+          <ol class="breadcrumb">
+            <li><a href="index.html">Home</a></li>
+            <li class="active">About</li>
+          </ol>
         </div>
 
       </div>
 
       <div class="row">
 
-        <div class="col-md-3 portfolio-item">
-          <a href="portfolio-item.html"><img class="img-responsive" src="http://placehold.it/750x450"></a>
+        <div class="col-md-6">
+          <img class="img-responsive" src="http://placehold.it/750x450">
         </div>
-
-        <div class="col-md-3 portfolio-item">
-          <a href="portfolio-item.html"><img class="img-responsive" src="http://placehold.it/750x450"></a>
-        </div>
-
-        <div class="col-md-3 portfolio-item">
-          <a href="portfolio-item.html"><img class="img-responsive" src="http://placehold.it/750x450"></a>
-        </div>
-
-        <div class="col-md-3 portfolio-item">
-          <a href="portfolio-item.html"><img class="img-responsive" src="http://placehold.it/750x450"></a>
+        <div class="col-md-6">
+          <h2>Welcome to 'Modern Business'</h2>
+          <p>This is a great place to introduce your company or project and describe what you do. This about page features general company information, employee bios, and other helpful elements.</p>
+          <p>Lid est laborum dolo rumes fugats untras. Etharums ser quidem rerum facilis dolores nemis omnis fugats vitaes nemo minima rerums unsers sadips amets.. Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo. Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur magni dolores eos qui ratione voluptatem sequi nesciunt.</p>
         </div>
 
       </div>
 
-      <div class="row">
 
-        <div class="col-md-3 portfolio-item">
-          <a href="portfolio-item.html"><img class="img-responsive" src="http://placehold.it/750x450"></a>
-        </div>
-
-        <div class="col-md-3 portfolio-item">
-          <a href="portfolio-item.html"><img class="img-responsive" src="http://placehold.it/750x450"></a>
-        </div>
-
-        <div class="col-md-3 portfolio-item">
-          <a href="portfolio-item.html"><img class="img-responsive" src="http://placehold.it/750x450"></a>
-        </div>
-
-        <div class="col-md-3 portfolio-item">
-          <a href="portfolio-item.html"><img class="img-responsive" src="http://placehold.it/750x450"></a>
-        </div>
-
-      </div>
-
-      <div class="row">
-
-        <div class="col-md-3 portfolio-item">
-          <a href="portfolio-item.html"><img class="img-responsive" src="http://placehold.it/750x450"></a>
-        </div>
-
-        <div class="col-md-3 portfolio-item">
-          <a href="portfolio-item.html"><img class="img-responsive" src="http://placehold.it/750x450"></a>
-        </div>
-
-        <div class="col-md-3 portfolio-item">
-          <a href="portfolio-item.html"><img class="img-responsive" src="http://placehold.it/750x450"></a>
-        </div>
-
-        <div class="col-md-3 portfolio-item">
-          <a href="portfolio-item.html"><img class="img-responsive" src="http://placehold.it/750x450"></a>
-        </div>
-
-      </div>
-
-      <hr>
-
-      <div class="row text-center">
+<div class="row">
 
         <div class="col-lg-12">
-          <ul class="pagination">
-            <li><a href="#">&laquo;</a></li>
-            <li class="active"><a href="#">1</a></li>
-            <li><a href="#">2</a></li>
-            <li><a href="#">3</a></li>
-            <li><a href="#">4</a></li>
-            <li><a href="#">5</a></li>
-            <li><a href="#">&raquo;</a></li>
-          </ul>
+          <h1 class="page-header">Pricing Table <small>Our Pricing Options</small></h1>
+          <ol class="breadcrumb">
+            <li><a href="index.html">Home</a></li>
+            <li class="active">Pricing Table</li>
+          </ol>
         </div>
 
       </div>
 
-    </div><!-- /.container -->
+      <div class="row">
 
-    <div class="container">
-
-      <hr>
-
-      <footer>
-        <div class="row">
-          <div class="col-lg-12">
-            <p>Copyright &copy; Company 2013</p>
+        <div class="col-sm-3">
+          <div class="panel panel-default text-center">
+            <div class="panel-heading">
+              <strong>Basic</strong>
+            </div>
+            <div class="panel-body">
+              <h3 class="panel-title price">$9<span class="price-cents">99</span><span class="price-month">mo.</span></h3>
+            </div>
+            <ul class="list-group">
+              <li class="list-group-item">5 Projects</li>
+              <li class="list-group-item">5 GB of Storage</li>
+              <li class="list-group-item">Up to 100 Users</li>
+              <li class="list-group-item">10 GB Bandwidth</li>
+              <li class="list-group-item">Security Suite</li>
+              <li class="list-group-item"><a class="btn btn-primary">Sign Up Now!</a></li>
+            </ul>
           </div>
         </div>
-      </footer>
+        <div class="col-sm-3">
+          <div class="panel panel-default text-center">
+            <div class="panel-heading">
+              <strong>Plus</strong>
+            </div>
+            <div class="panel-body">
+              <h3 class="panel-title price">$19<span class="price-cents">99</span><span class="price-month">mo.</span></h3>
+            </div>
+            <ul class="list-group">
+              <li class="list-group-item">10 Projects</li>
+              <li class="list-group-item">10 GB of Storage</li>
+              <li class="list-group-item">Up to 250 Users</li>
+              <li class="list-group-item">25 GB Bandwidth</li>
+              <li class="list-group-item">Security Suite</li>
+              <li class="list-group-item"><a class="btn btn-primary">Sign Up Now!</a></li>
+            </ul>
+          </div>
+        </div>
+        <div class="col-sm-3">
+          <div class="panel panel-default text-center">
+            <div class="panel-heading">
+              <strong>Premium <span class="label label-success">Best Value!</span></strong>
+            </div>
+            <div class="panel-body">
+              <h3 class="panel-title price">$29<span class="price-cents">99</span><span class="price-month">mo.</span></h3>
+            </div>
+            <ul class="list-group">
+              <li class="list-group-item">Unlimited</li>
+              <li class="list-group-item">50 GB of Storage</li>
+              <li class="list-group-item">Up to 1000 Users</li>
+              <li class="list-group-item">100 GB Bandwidth</li>
+              <li class="list-group-item">Security Suite</li>
+              <li class="list-group-item"><a class="btn btn-primary">Sign Up Now!</a></li>
+            </ul>
+          </div>
+        </div>
+        <div class="col-sm-3">
+          <div class="panel panel-default text-center">
+            <div class="panel-heading">
+              <strong>Ultimate</strong>
+            </div>
+            <div class="panel-body">
+              <h3 class="panel-title price">$49<span class="price-cents">99</span><span class="price-month">mo.</span></h3>
+            </div>
+            <ul class="list-group">
+              <li class="list-group-item">Unlimited</li>
+              <li class="list-group-item">150 GB of Storage</li>
+              <li class="list-group-item">Unlimited</li>
+              <li class="list-group-item">500 GB Bandwidth</li>
+              <li class="list-group-item">Security Suite</li>
+              <li class="list-group-item"><a class="btn btn-primary">Sign Up Now!</a></li>
+            </ul>
+          </div>
+        </div>
 
-    </div><!-- /.container -->
+      </div>
 
 
+
+
+    </div>
 </template>
