--- a/client/views/home/home.html
+++ b/client/views/home/home.html
@@ -1,125 +1,122 @@
 <template name="home">
+<div class="ui page">
 
 
-    <div class="container">
+  <div class="ui row">
+    <h4 class="ui black block header">
+      Block Header
+    </h4>
+    <p>Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Vestibulum tortor quam, feugiat vitae, ultricies eget, tempor sit amet, ante. Donec eu libero sit amet quam egestas semper. Aenean ultricies mi vitae est. Mauris placerat eleifend leo.</p>
+  </div>
 
-      <div class="row">
 
-        <div class="col-lg-12">
-          <h1 class="page-header">About <small>It's Nice to Meet You!</small></h1>
-          <ol class="breadcrumb">
-            <li><a href="index.html">Home</a></li>
-            <li class="active">About</li>
-          </ol>
+    <div class="ui vertically divided grid">
+      <div class="two column row">
+        <div class="column">
+          <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Donec odio. Quisque volutpat mattis eros. Nullam malesuada erat ut turpis. Suspendisse urna nibh, viverra non, semper suscipit, posuere a, pede.</p>
         </div>
-
+        <div class="column">
+          <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Donec odio. Quisque volutpat mattis eros. Nullam malesuada erat ut turpis. Suspendisse urna nibh, viverra non, semper suscipit, posuere a, pede.</p>
+        </div>
       </div>
-
-      <div class="row">
-
-        <div class="col-md-6">
-          <img class="img-responsive" src="http://placehold.it/750x450">
+      <div class="three column row">
+        <div class="column">
+          <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Donec odio. Quisque volutpat mattis eros. Nullam malesuada erat ut turpis. Suspendisse urna nibh, viverra non, semper suscipit, posuere a, pede.</p>
         </div>
-        <div class="col-md-6">
-          <h2>Welcome to 'Modern Business'</h2>
-          <p>This is a great place to introduce your company or project and describe what you do. This about page features general company information, employee bios, and other helpful elements.</p>
-          <p>Lid est laborum dolo rumes fugats untras. Etharums ser quidem rerum facilis dolores nemis omnis fugats vitaes nemo minima rerums unsers sadips amets.. Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo. Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur magni dolores eos qui ratione voluptatem sequi nesciunt.</p>
+        <div class="column">
+          <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Donec odio. Quisque volutpat mattis eros. Nullam malesuada erat ut turpis. Suspendisse urna nibh, viverra non, semper suscipit, posuere a, pede.</p>
         </div>
-
+        <div class="column">
+          <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Donec odio. Quisque volutpat mattis eros. Nullam malesuada erat ut turpis. Suspendisse urna nibh, viverra non, semper suscipit, posuere a, pede.</p>
+        </div>
       </div>
-
-
-<div class="row">
-
-        <div class="col-lg-12">
-          <h1 class="page-header">Pricing Table <small>Our Pricing Options</small></h1>
-          <ol class="breadcrumb">
-            <li><a href="index.html">Home</a></li>
-            <li class="active">Pricing Table</li>
-          </ol>
-        </div>
-
-      </div>
-
-      <div class="row">
-
-        <div class="col-sm-3">
-          <div class="panel panel-default text-center">
-            <div class="panel-heading">
-              <strong>Basic</strong>
-            </div>
-            <div class="panel-body">
-              <h3 class="panel-title price">$9<span class="price-cents">99</span><span class="price-month">mo.</span></h3>
-            </div>
-            <ul class="list-group">
-              <li class="list-group-item">5 Projects</li>
-              <li class="list-group-item">5 GB of Storage</li>
-              <li class="list-group-item">Up to 100 Users</li>
-              <li class="list-group-item">10 GB Bandwidth</li>
-              <li class="list-group-item">Security Suite</li>
-              <li class="list-group-item"><a class="btn btn-primary">Sign Up Now!</a></li>
-            </ul>
-          </div>
-        </div>
-        <div class="col-sm-3">
-          <div class="panel panel-default text-center">
-            <div class="panel-heading">
-              <strong>Plus</strong>
-            </div>
-            <div class="panel-body">
-              <h3 class="panel-title price">$19<span class="price-cents">99</span><span class="price-month">mo.</span></h3>
-            </div>
-            <ul class="list-group">
-              <li class="list-group-item">10 Projects</li>
-              <li class="list-group-item">10 GB of Storage</li>
-              <li class="list-group-item">Up to 250 Users</li>
-              <li class="list-group-item">25 GB Bandwidth</li>
-              <li class="list-group-item">Security Suite</li>
-              <li class="list-group-item"><a class="btn btn-primary">Sign Up Now!</a></li>
-            </ul>
-          </div>
-        </div>
-        <div class="col-sm-3">
-          <div class="panel panel-default text-center">
-            <div class="panel-heading">
-              <strong>Premium <span class="label label-success">Best Value!</span></strong>
-            </div>
-            <div class="panel-body">
-              <h3 class="panel-title price">$29<span class="price-cents">99</span><span class="price-month">mo.</span></h3>
-            </div>
-            <ul class="list-group">
-              <li class="list-group-item">Unlimited</li>
-              <li class="list-group-item">50 GB of Storage</li>
-              <li class="list-group-item">Up to 1000 Users</li>
-              <li class="list-group-item">100 GB Bandwidth</li>
-              <li class="list-group-item">Security Suite</li>
-              <li class="list-group-item"><a class="btn btn-primary">Sign Up Now!</a></li>
-            </ul>
-          </div>
-        </div>
-        <div class="col-sm-3">
-          <div class="panel panel-default text-center">
-            <div class="panel-heading">
-              <strong>Ultimate</strong>
-            </div>
-            <div class="panel-body">
-              <h3 class="panel-title price">$49<span class="price-cents">99</span><span class="price-month">mo.</span></h3>
-            </div>
-            <ul class="list-group">
-              <li class="list-group-item">Unlimited</li>
-              <li class="list-group-item">150 GB of Storage</li>
-              <li class="list-group-item">Unlimited</li>
-              <li class="list-group-item">500 GB Bandwidth</li>
-              <li class="list-group-item">Security Suite</li>
-              <li class="list-group-item"><a class="btn btn-primary">Sign Up Now!</a></li>
-            </ul>
-          </div>
-        </div>
-
-      </div>
-
-
-
-
     </div>
+
+
+
+    <div class="ui grid">
+      <div class="eight wide column">
+        <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Donec odio. Quisque volutpat mattis eros. Nullam malesuada erat ut turpis. Suspendisse urna nibh, viverra non, semper suscipit, posuere a, pede.</p>
+        <div class="ui divider"></div>
+        <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Donec odio. Quisque volutpat mattis eros. Nullam malesuada erat ut turpis. Suspendisse urna nibh, viverra non, semper suscipit, posuere a, pede.</p>
+      </div>
+      <div class="eight wide column">
+        <a href="http://google.com" class="ui large image">
+          <img src="/img/camera-man.jpg">
+        </a>
+      </div>
+    </div>
+
+
+
+     <div class="ui icon message">
+      <i class="inbox icon"></i>
+      <div class="content">
+        <div class="header">
+          Have you heard about our mailing list?
+        </div>
+        <p>Get all the best inventions in your e-mail every day. Sign up now!</p>
+      </div>
+    </div>
+
+
+      <div class="ui three column grid">
+        <div class="column">
+          <div class="ui segment">
+            1
+          </div>
+        </div>
+        <div class="column">
+          <div class="ui segment">
+            2
+          </div>
+        </div>
+        <div class="column">
+          <div class="ui segment">
+            3
+          </div>
+        </div>
+        <div class="column">
+          <div class="ui segment">
+            4
+          </div>
+        </div>
+      </div>
+
+
+
+
+    <table class="ui table segment">
+      <thead>
+        <tr><th>Name</th>
+        <th>Status</th>
+        <th>Notes</th>
+      </tr></thead>
+      <tbody>
+        <tr>
+          <td>John</td>
+          <td>Approved</td>
+          <td>None</td>
+        </tr>
+        <tr>
+          <td>Jamie</td>
+          <td>Approved</td>
+          <td>Requires call</td>
+        </tr>
+        <tr>
+          <td>Jill</td>
+          <td>Denied</td>
+          <td>None</td>
+        </tr>
+      </tbody>
+      <tfoot>
+        <tr><th colspan="3">
+          <div class="ui blue labeled icon button"><i class="user icon"></i> Add User</div>
+        </th>
+      </tr></tfoot>
+    </table>
+
+</div>
+
+
 </template>
