--- a/client/views/contact/contact.html
+++ b/client/views/contact/contact.html
@@ -1,32 +1,65 @@
 <template name="contact">
-    <div class="container">
-    <div class="row">
-      <div class="col-sm-4">
-        <h3>Contact Us</h3>
-        <hr>
-        <address>
-        <strong>Email:</strong> <a href="mailto:#"> name@domain.com</a><br><br>
-        <strong>Phone:</strong> (555)123-4567
-        </address>
+<div class="ui piled segment">
+  <h2>A header</h2>
+  <p>Te eum doming eirmod, nominati pertinacia argumentum ad his. Ex eam alia facete scriptorem, est autem aliquip detraxit at. Usu ocurreret referrentur at, cu epicurei appellantur vix. Cum ea laoreet recteque electram, eos choro alterum definiebas in. Vim dolorum definiebas an. Mei ex natum rebum iisque.</p>
+   <p>Audiam quaerendum eu sea, pro omittam definiebas ex. Te est latine definitiones. Quot wisi nulla ex duo. Vis sint solet expetenda ne, his te phaedrum referrentur consectetuer. Id vix fabulas oporteat, ei quo vide phaedrum, vim vivendum maiestatis in.</p>
+   <p>Eu quo homero blandit intellegebat. Incorrupte consequuntur mei id. Mei ut facer dolores adolescens, no illum aperiri quo, usu odio brute at. Qui te porro electram, ea dico facete utroque quo. Populo quodsi te eam, wisi everti eos ex, eum elitr altera utamur at. Quodsi convenire mnesarchum eu per, quas minimum postulant per id.</p>
+</div>
+<div class="dark stripe">
+  <div class="ui page grid">
+    <div class="column">
+      <h2 class="ui huge inverted center aligned icon header">
+        <i class="circular emphasized inverted teal chat outline icon"></i>
+        <div class="content">Have a conversation with your components<div class="sub header">Semantic gives you a variety of UI components with real-time debug output, letting your code tell you what its doing.</div>
+        </div>
+      </h2>
+      <div class="ui inverted horizontal section divider">
+        <i class="circular heart icon"></i>
+      </div>
+      <div class="ui stackable grid" >
+        <div class="row">
+          <div class="ten wide column">
+          <div class="ui teal header">Contact Us</div>
+          <p>Semantic provides tracing for javascript behavior so your components can tell you what they're doing as they do it.</p>
+
+          </div>
+          <div class="six wide column">
+            <img src="/img/hazy-trees.jpg" class="ui image">
+          </div>
+        </div>
       </div>
 
-      <div class="col-sm-8 contact-form">
-        <form id="contact" method="post" class="form" role="form">
-        <div class="row">
-        <div class="col-xs-6 col-md-6 form-group">
-        <input class="form-control" id="name" name="name" placeholder="Name" type="text" required autofocus />
+      <div class="ui form segment">
+          <div class="two fields">
+            <div class="field">
+              <label>First Name</label>
+              <input placeholder="First Name" type="text">
+            </div>
+            <div class="field">
+              <label>Last Name</label>
+              <input placeholder="Last Name" type="text">
+            </div>
+          </div>
+          <div class="field">
+            <label>Username</label>
+            <input placeholder="Username" type="text">
+          </div>
+          <div class="field">
+            <label>Password</label>
+            <input type="password">
+          </div>
+          <div class="inline field">
+            <div class="ui checkbox">
+              <input type="checkbox">
+              <label>I agree to the terms and conditions</label>
+            </div>
+          </div>
+          <div class="ui blue submit button">Submit</div>
         </div>
-        <div class="col-xs-6 col-md-6 form-group">
-        <input class="form-control" id="email" name="email" placeholder="Email" type="email" required />
-        </div>
-        </div>
-        <textarea class="form-control" id="message" name="message" placeholder="Message" rows="5"></textarea>
-        <br />
-        <div class="row">
-        <div class="col-xs-12 col-md-12 form-group">
-        <button class="btn btn-primary pull-right" type="submit">Submit</button>
-        </form>
-      </div>
+
+
+
     </div>
   </div>
+</div>
 </template>
