--- a/client/views/portfolio/portfolio.html
+++ b/client/views/portfolio/portfolio.html
@@ -1,83 +1,79 @@
 <template name="portfolio">
-  <div class="container">
-
-      <div class="row">
-
-        <div class="col-lg-12">
-          <h1 class="page-header">Two Column Portfolio <small>Showcase Your Work</small></h1>
-          <ol class="breadcrumb">
-            <li><a href="index.html">Home</a></li>
-            <li class="active">Two Column Portfolio</li>
-          </ol>
-        </div>
-
+  <div class="ui page">
+    <div class="ui grid">
+  <div class="two column mobile only row">
+    <div class="column">
+      <div class="ui segment">
+        Mobile
       </div>
-
-      <div class="row">
-
-        <div class="col-md-6 portfolio-item">
-          <a href="portfolio-item.html"><img class="img-responsive" src="http://placehold.it/750x450"></a>
-          <h3><a href="portfolio-item.html">Project Name</a></h3>
-          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam viverra euismod odio, gravida pellentesque urna varius vitae.</p>
-        </div>
-
-        <div class="col-md-6 portfolio-item">
-          <a href="portfolio-item.html"><img class="img-responsive" src="http://placehold.it/750x450"></a>
-          <h3><a href="portfolio-item.html">Project Name</a></h3>
-          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam viverra euismod odio, gravida pellentesque urna varius vitae.</p>
-        </div>
-
+    </div>
+    <div class="column">
+      <div class="ui segment">
+        Mobile
       </div>
-
-      <div class="row">
-
-        <div class="col-md-6 portfolio-item">
-          <a href="portfolio-item.html"><img class="img-responsive" src="http://placehold.it/750x450"></a>
-          <h3><a href="portfolio-item.html">Project Name</a></h3>
-          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam viverra euismod odio, gravida pellentesque urna varius vitae.</p>
-        </div>
-
-        <div class="col-md-6 portfolio-item">
-          <a href="portfolio-item.html"><img class="img-responsive" src="http://placehold.it/750x450"></a>
-          <h3><a href="portfolio-item.html">Project Name</a></h3>
-          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam viverra euismod odio, gravida pellentesque urna varius vitae.</p>
-        </div>
-
+    </div>
+  </div>
+  <div class="three column row">
+    <div class="computer only column">
+      <div class="ui segment">
+        Computer
       </div>
-
-      <div class="row">
-
-        <div class="col-md-6 portfolio-item">
-          <a href="portfolio-item.html"><img class="img-responsive" src="http://placehold.it/750x450"></a>
-          <h3><a href="portfolio-item.html">Project Name</a></h3>
-          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam viverra euismod odio, gravida pellentesque urna varius vitae.</p>
-        </div>
-
-        <div class="col-md-6 portfolio-item">
-          <a href="portfolio-item.html"><img class="img-responsive" src="http://placehold.it/750x450"></a>
-          <h3><a href="portfolio-item.html">Project Name</a></h3>
-          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam viverra euismod odio, gravida pellentesque urna varius vitae.</p>
-        </div>
-
+    </div>
+    <div class="tablet mobile only column">
+      <div class="ui segment">
+        Tablet and Mobile
       </div>
-
-      <hr>
-
-      <div class="row text-center">
-
-        <div class="col-lg-12">
-          <ul class="pagination">
-            <li><a href="#">&laquo;</a></li>
-            <li class="active"><a href="#">1</a></li>
-            <li><a href="#">2</a></li>
-            <li><a href="#">3</a></li>
-            <li><a href="#">4</a></li>
-            <li><a href="#">5</a></li>
-            <li><a href="#">&raquo;</a></li>
-          </ul>
-        </div>
-
+    </div>
+    <div class="column">
+      <div class="ui segment">
+        All Sizes
       </div>
-
-    </div><!-- /.container -->
+    </div>
+    <div class="column">
+      <div class="ui segment">
+        All Sizes
+      </div>
+    </div>
+  </div>
+  <div class="four column computer only row">
+    <div class="column">
+      <div class="ui segment">
+        Computer
+      </div>
+    </div>
+    <div class="column">
+      <div class="ui segment">
+        Computer
+      </div>
+    </div>
+    <div class="column">
+      <div class="ui segment">
+        Computer
+      </div>
+    </div>
+    <div class="column">
+      <div class="ui segment">
+        Computer
+      </div>
+    </div>
+  </div>
+  <div class="three column tablet only row">
+    <div class="column">
+      <div class="ui segment">
+        Tablet
+      </div>
+    </div>
+    <div class="column">
+      <div class="ui segment">
+        Tablet
+      </div>
+    </div>
+    <div class="column">
+      <div class="ui segment">
+        Tablet
+      </div>
+    </div>
+  </div>
+</div>
+  </div>
 </template>
