basic setup + started accounts-entry-semantic

--- a/client/views/header/header.html
+++ b/client/views/header/header.html
@@ -11,6 +11,11 @@
     <a class="item" href="{{pathFor 'contact'}}">
       <i class="mail icon"></i><span>Contact</span>
     </a>
+    <a class="item" href="{{pathFor 'entrySignIn'}}">
+      <i class="cloud icon"></i><span>Log In</span>
+    </a>
+
+    {{loginButtons}}
     <div class="right menu">
       <div class="item">
         <div class="ui icon input">
