--- a/client/views/errors/404.html
+++ b/client/views/errors/404.html
@@ -1,19 +1,26 @@
 <template name="404">
- <div class="container">
-    <div class="row">
-        <div class="col-md-12">
-            <div class="error-template">
-                <h1>
-                    Oops!</h1>
-                <h2>
-                    404 Not Found</h2>
-                <div class="error-details">
-                    Sorry, an error has occured, Requested page not found!
-                </div>
-                <div class="error-actions">
-                    <a href="http://www.jquery2dotnet.com" class="btn btn-primary btn-lg"><span class="glyphicon glyphicon-home"></span>
-                        Take Me Home </a><a href="http://www.jquery2dotnet.com" class="btn btn-default btn-lg"><span class="glyphicon glyphicon-envelope"></span> Contact Support </a>
-                </div>
+
+<div class="ui one column grid center aligned">
+    <div class="column six wide">
+        <div class="ui basic segment">
+
+            <div class="ui huge icon header">
+              <i class="inverted green circular question icon"></i>
+              <h3 class="ui header">Sorry</h3>
+              <div class="sub header">This page doesn't seem to exist!</div>
+            </div>
+
+            <div class="ui horizontal icon divider">
+                <i class="large circular angle down icon"></i>
+            </div>
+
+            <div class="ui header">
+                <a href="/">
+                    <div class="ui down button">
+                      <i class="user icon"></i>
+                      Go back to Home Page
+                    </div>
+                </a>
             </div>
         </div>
     </div>
