--- a/client/views/footer/footer.html
+++ b/client/views/footer/footer.html
@@ -1,16 +1,9 @@
 <template name="footer">
-      <div class="container">
 
-      <hr>
-
-      <footer>
-        <div class="row">
-          <div class="col-lg-12">
-            <p>Copyright &copy; Company 2013</p>
-          </div>
-        </div>
-      </footer>
-
-    </div><!-- /.container -->
+    <footer class="ui green large inverted menu">
+      <a class="item" href="http://palmandplay.com" target="_blank">
+        <span> Copyright &copy; PalmandPlay 2013 </span>
+      </a>
+    </footer>
 
 </template>
