--- a/client/views/layout.html
+++ b/client/views/layout.html
@@ -4,13 +4,8 @@
     <meta name="description" content="">
     <meta name="author" content="">
 
-    <title>Four Column Portfolio Template for Bootstrap 3</title>
+    <title>Meteor Boilerplate with Semantic UI</title>
 
-    <!-- Bootstrap core CSS -->
-    <link href="css/bootstrap.css" rel="stylesheet">
-
-    <!-- Custom CSS for the '4 Col Portfolio' Template -->
-    <link href="css/4-col-portfolio.css" rel="stylesheet">
   </head>
 
 
