--- a/client/views/home/home.html
+++ b/client/views/home/home.html
@@ -1,46 +1,82 @@
 <template name="home">
 <div class="ui page">
 
+  <div class="ui grid center aligned ">
+    <div class="column twelve wide center aligned">
+      <h1 class="ui inverted green block header"> Meteor Semantic Boilerplate </h1>
+      <p> Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Vestibulum tortor quam, feugiat vitae, ultricies eget, tempor sit amet, ante. Donec eu libero sit amet quam egestas semper. Aenean ultricies mi vitae est. Mauris placerat eleifend leo.</p>
+    </div>
+    <div class="ui image">
+      <img src="/img/img3.jpg" alt="" class="ui masssive image">
+    </div>
 
-  <div class="ui row">
-    <h4 class="ui black block header">
-      Block Header
-    </h4>
-    <p>Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Vestibulum tortor quam, feugiat vitae, ultricies eget, tempor sit amet, ante. Donec eu libero sit amet quam egestas semper. Aenean ultricies mi vitae est. Mauris placerat eleifend leo.</p>
+  </div>
+
+  <div class="two column doubling center aligned  ui grid">
+
+      <div class="six wide column">
+        <div class="ui segment">
+          <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Donec odio. Quisque volutpat mattis eros. Nullam malesuada erat ut turpis. Suspendisse urna nibh, viverra non, semper suscipit, posuere a, pede.</p>
+        </div>
+      </div>
+      <div class="six wide column">
+        <div class="ui segment">
+          <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Donec odio. Quisque volutpat mattis eros. Nullam malesuada erat ut turpis. Suspendisse urna nibh, viverra non, semper suscipit, posuere a, pede.</p>
+        </div>
+      </div>
   </div>
 
 
-    <div class="ui vertically divided grid">
-      <div class="two column row">
-        <div class="column">
-          <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Donec odio. Quisque volutpat mattis eros. Nullam malesuada erat ut turpis. Suspendisse urna nibh, viverra non, semper suscipit, posuere a, pede.</p>
+  <div class="ui three column doubling grid">
+      <div class="column">
+      <h2 class="ui huge center aligned icon header">
+        <i class="circular emphasized inverted green rocket icon"></i>
+        <div class="content">Meteor.js<div class="sub header">Real-Time javascript framework</div>
         </div>
-        <div class="column">
-          <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Donec odio. Quisque volutpat mattis eros. Nullam malesuada erat ut turpis. Suspendisse urna nibh, viverra non, semper suscipit, posuere a, pede.</p>
-        </div>
+      </h2>
       </div>
-      <div class="three column row">
-        <div class="column">
-          <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Donec odio. Quisque volutpat mattis eros. Nullam malesuada erat ut turpis. Suspendisse urna nibh, viverra non, semper suscipit, posuere a, pede.</p>
+      <div class="column">
+      <h2 class="ui huge center aligned icon header">
+        <i class="circular emphasized inverted green checkmark icon"></i>
+        <div class="content">Semantic UI<div class="sub header">Semantic HTML for the Masses</div>
         </div>
-        <div class="column">
-          <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Donec odio. Quisque volutpat mattis eros. Nullam malesuada erat ut turpis. Suspendisse urna nibh, viverra non, semper suscipit, posuere a, pede.</p>
-        </div>
-        <div class="column">
-          <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Donec odio. Quisque volutpat mattis eros. Nullam malesuada erat ut turpis. Suspendisse urna nibh, viverra non, semper suscipit, posuere a, pede.</p>
-        </div>
+      </h2>
       </div>
+      <div class="column">
+      <h2 class="ui huge center aligned icon header">
+        <i class="circular emphasized inverted green magic icon"></i>
+        <div class="content">Boilerplate<div class="sub header">Custom stuff to get going</div>
+        </div>
+      </h2>
+      </div>
+  </div>
+
+  <div class="ui one column grid center aligned">
+  <div class="twelve wide column">
+    <div class="ui secondary inverted raised left aligned segment">
+        <i class="inbox icon"></i>
+        <div class="header">
+          Have you heard about our mailing list?
+        </div>
+        <p>Get all the best inventions in your e-mail every day. Sign up now!</p>
+        <div class="ui action input">
+          <input type="text" placeholder="Your email">
+          <div class="ui button">Sign Up</div>
+        </div>
+
     </div>
+  </div>
+  </div>
 
 
 
-    <div class="ui grid">
-      <div class="eight wide column">
+    <div class="ui two column grid">
+      <div class="column">
         <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Donec odio. Quisque volutpat mattis eros. Nullam malesuada erat ut turpis. Suspendisse urna nibh, viverra non, semper suscipit, posuere a, pede.</p>
         <div class="ui divider"></div>
         <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Donec odio. Quisque volutpat mattis eros. Nullam malesuada erat ut turpis. Suspendisse urna nibh, viverra non, semper suscipit, posuere a, pede.</p>
       </div>
-      <div class="eight wide column">
+      <div class="column">
         <a href="http://google.com" class="ui large image">
           <img src="/img/camera-man.jpg">
         </a>
@@ -48,73 +84,6 @@
     </div>
 
 
-
-     <div class="ui icon message">
-      <i class="inbox icon"></i>
-      <div class="content">
-        <div class="header">
-          Have you heard about our mailing list?
-        </div>
-        <p>Get all the best inventions in your e-mail every day. Sign up now!</p>
-      </div>
-    </div>
-
-
-      <div class="ui three column grid">
-        <div class="column">
-          <div class="ui segment">
-            1
-          </div>
-        </div>
-        <div class="column">
-          <div class="ui segment">
-            2
-          </div>
-        </div>
-        <div class="column">
-          <div class="ui segment">
-            3
-          </div>
-        </div>
-        <div class="column">
-          <div class="ui segment">
-            4
-          </div>
-        </div>
-      </div>
-
-
-
-
-    <table class="ui table segment">
-      <thead>
-        <tr><th>Name</th>
-        <th>Status</th>
-        <th>Notes</th>
-      </tr></thead>
-      <tbody>
-        <tr>
-          <td>John</td>
-          <td>Approved</td>
-          <td>None</td>
-        </tr>
-        <tr>
-          <td>Jamie</td>
-          <td>Approved</td>
-          <td>Requires call</td>
-        </tr>
-        <tr>
-          <td>Jill</td>
-          <td>Denied</td>
-          <td>None</td>
-        </tr>
-      </tbody>
-      <tfoot>
-        <tr><th colspan="3">
-          <div class="ui blue labeled icon button"><i class="user icon"></i> Add User</div>
-        </th>
-      </tr></tfoot>
-    </table>
 
 </div>
 
