--- a/client/views/portfolio/portfolio.html
+++ b/client/views/portfolio/portfolio.html
@@ -1,79 +1,47 @@
 <template name="portfolio">
   <div class="ui page">
-    <div class="ui grid">
-  <div class="two column mobile only row">
-    <div class="column">
-      <div class="ui segment">
-        Mobile
+    <div class="ui stackable items">
+    <div class="item">
+      <div class="image">
+        <img src="/img/img1.jpg">
+        <a class="like ui corner label">
+          <i class="like icon"></i>
+        </a>
+      </div>
+      <div class="content">
+        <div class="name">This is Work number One</div>
+        <p class="description">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+        tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+        quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+        consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
+        cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
+        proident, sunt in culpa qui officia deserunt mollit anim id est laborum. </p>
+        <div class="extra">
+            199 votes
+        </div>
       </div>
     </div>
-    <div class="column">
-      <div class="ui segment">
-        Mobile
+    <div class="item">
+      <div class="image">
+        <img src="/img/img2.jpg">
+        <a class="like ui corner label">
+          <i class="like icon"></i>
+        </a>
       </div>
-    </div>
-  </div>
-  <div class="three column row">
-    <div class="computer only column">
-      <div class="ui segment">
-        Computer
-      </div>
-    </div>
-    <div class="tablet mobile only column">
-      <div class="ui segment">
-        Tablet and Mobile
-      </div>
-    </div>
-    <div class="column">
-      <div class="ui segment">
-        All Sizes
-      </div>
-    </div>
-    <div class="column">
-      <div class="ui segment">
-        All Sizes
-      </div>
-    </div>
-  </div>
-  <div class="four column computer only row">
-    <div class="column">
-      <div class="ui segment">
-        Computer
-      </div>
-    </div>
-    <div class="column">
-      <div class="ui segment">
-        Computer
-      </div>
-    </div>
-    <div class="column">
-      <div class="ui segment">
-        Computer
-      </div>
-    </div>
-    <div class="column">
-      <div class="ui segment">
-        Computer
+      <div class="content">
+        <div class="meta">5 days ago</div>
+        <div class="name">This is Work number Two</div>
+        <p class="description">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+        tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+        quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+        consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
+        cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
+        proident, sunt in culpa qui officia deserunt mollit anim id est laborum. </p>
+        <div class="extra">
+            311 votes
+        </div>
       </div>
     </div>
   </div>
-  <div class="three column tablet only row">
-    <div class="column">
-      <div class="ui segment">
-        Tablet
-      </div>
-    </div>
-    <div class="column">
-      <div class="ui segment">
-        Tablet
-      </div>
-    </div>
-    <div class="column">
-      <div class="ui segment">
-        Tablet
-      </div>
-    </div>
-  </div>
-</div>
   </div>
 </template>
